--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
   integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='main.css') }}">
-  <link rel="shortcut icon" href="#" />
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.png') }}">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <title>💿 Super-Playlister-3000 💿</title>
