--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -24,13 +24,9 @@
 </script>
 
 <div class='message'>
-  <a href=# class="login_btn" id=test><button class='btn btn-default'><i class="fab fa-spotify"></i>Reorder liked songs</button></a>
-  <p>Fetching songs</p>
-  <p>Fetching songs</p>
-  
-  <div class="loader1">
-    <div class="neumo"></div>
-</div>
+  <div class="path_button"><a href="/split" class="login_btn"><i class="fab fa-spotify"></i>Split Playlist</a></div>
+  <div class="path_button"><a href="/reorder" class="login_btn"><i class="fab fa-spotify"></i>Reorder Playlists</a></div>
+  <div class="path_button"><a href="/merge" class="login_btn"><i class="fab fa-spotify"></i>Merge Playlists</a></div>
 </div>
 {% endblock %}
 
