--- a/app/static/main.css
+++ b/app/static/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@700&family=Fira+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Fira+Sans&display=swap');
 
 :root {
   --spotify-black: #191414;
