--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -24,9 +24,9 @@
 </script>
 
 <div class='message'>
-  <div class="path_button"><a href="/split" class="login_btn"><i class="fab fa-spotify"></i>Split Playlist</a></div>
-  <div class="path_button"><a href="/reorder" class="login_btn"><i class="fab fa-spotify"></i>Reorder Playlists</a></div>
-  <div class="path_button"><a href="/merge" class="login_btn"><i class="fab fa-spotify"></i>Merge Playlists</a></div>
+  <div class="path_button"><a href="/merge" class="login_btn"><i class="fas fa-stop"></i>Merge Playlists</a></div>
+  <div class="path_button"><a href="/split" class="login_btn"><i class="fas fa-th-large"></i>Split Playlist</a></div>
+  <div class="path_button"><a href="/reorder" class="login_btn"><i class="fas fa-redo-alt"></i>Reorder Playlists</a></div>
 </div>
 {% endblock %}
 
