--- a/app/templates/split.html
+++ b/app/templates/split.html
@@ -13,7 +13,7 @@
 <div class="options-menu">
     <div class='options-row'>
         <div class='split left'>
-            <p class="title">💿 Select source playlists</p>
+            <p class="title">💿 Select source playlists to split</p>
             <form>
                 {%for p in playlists%}
                     <input class="custom-checkbox" type="checkbox" id="{{p['id']}}" name="{{p['name']}}" value="{{p['id']}}">
