--- a/app/static/main.css
+++ b/app/static/main.css
@@ -12,3 +12,44 @@ html, body {
   height: 100%;
   background-color: var(--spotify-black);
 }
+
+#loading {
+  display:none;
+}
+
+.lds-ripple {
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  width: 220px;
+  height: 220px;
+  cursor: wait;
+  transform: translate(50%, -50%);
+}
+.lds-ripple div {
+  position: absolute;
+  border: 4px solid #1DB954;
+  opacity: 1;
+  border-radius: 50%;
+  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.lds-ripple div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+@keyframes lds-ripple {
+  0% {
+    top: 100px;
+    left: 100px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
+    width: 200px;
+    height: 200px;
+    opacity: 0;
+  }
+}
