--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,6 +22,9 @@
 </head>
 
 <body>
+  <div id="loading">
+    <div class="lds-ripple"><div></div><div></div></div>
+  </div>
   <div id="content">
     {% block content %}{% endblock %}
   </div>
