--- a/app/templates/merge.html
+++ b/app/templates/merge.html
@@ -1,17 +1,44 @@
 {% extends "base.html" %}
 {% block head %}
-	{{ super() }}
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='features.css') }}">
+    {{ super() }}
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='options.css') }}">
 
 {% endblock %}
+
 
 {% block content %}
-<div class='options'>
-    <div class='left_side'>
-        <h1>Sources</h1>
-        <div class='playlists'>
+
+<script type="text/javascript">// <![CDATA[
+    function loading(){
+        $("#loading").show();
+        $("#content").hide();       
+    }
+// ]]></script>
+
+<div class="options-menu">
+<form method="post">
+    <div class='options-row'>
+        <div class='split left'>
+            <p class="title">💿 Select source playlists to merge</p>
+                <div class="selection">
+                    {%for p in playlists%}
+                        <input class="custom-checkbox" type="checkbox" id="{{p['id']}}" name="playlists_to_merge" value="{{p}}">
+                        <label class="playlist-title" for="{{p['id']}}">{{p['name']}}</label><br>
+                    {%endfor%}
+                </div>
+            </div>
             
+            <div class='split right'>
+                
+            </div>
         </div>
-    </div>
+        <div class='button-row'>
+            <!-- <div class="path_button"><a href="#" class="submit_btn"><i class="fab fa-spotify"></i>Go!</a></div> -->
+            <input type="submit" class="path_button" class="submit_btn" value="Go!" onclick="loading();">
+        </div>
+    </form>
 </div>
 {% endblock %}
+
+
+
