--- a/app/templates/merge.html
+++ b/app/templates/merge.html
@@ -1,55 +1,54 @@
-{% extends "base.html" %}
-{% block head %}
-    {{ super() }}
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='options.css') }}">
+{% extends "base.html" %} {% block head %} {{ super() }}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='options.css') }}" />
 
-{% endblock %}
+{% endblock %} {% block content %}
 
-
-{% block content %}
-
-<script type="text/javascript">// <![CDATA[
-    function loading(){
-        $("#loading").show();
-        $("#content").hide();
-    }
-// ]]></script>
+<script type="text/javascript">
+  // <![CDATA[
+  function loading() {
+    $("#loading").show();
+    $("#content").hide();
+  }
+  // ]]>
+</script>
 
 <div class="options-menu">
-<form method="post">
-    <div class='options-row'>
-        <div class='split left'>
-            <p class="title">💿 Select source playlists to merge</p>
-                <div class="selection">
-                    {%for p in playlists%}
-                        <input class="custom-checkbox" type="checkbox" id="{{p['id']}}" name="playlists_to_merge" value="{{p}}">
-                        <label class="playlist-title" for="{{p['id']}}">{{p['name']}}</label><br>
-                    {%endfor%}
-                </div>
-            </div>
-            
-            <div class='split right'>
-                <p class="options-title">Options: </p>
-
-                <label class="options-label" for="merged_playlist_name">Playlist name</label><br>
-                <input type="text" id="merged_playlist_name" name="merged_playlist_name" placeholder="Merged Playlist"><br><br>
-
-                <input type="checkbox" id="merge_public" name="merge_is_public" value="true">
-                <label class="options-label-padded" for="merge_public">Make merged playlist public</label><br>
-
-                <input checked type="radio" id="merge_rnd" name="merge_order_mode_style" value=false>
-                <label class="options-label-padded" for="merge_rnd">Shuffle randomly</label><br>
-
-                <input type="radio" id="merge_style" name="merge_order_mode_style" value=true>
-                <label class="options-label-padded" for="merge_style">Order by style</label><br>
-            </div>
+  <form method="post">
+    <div class="options-row">
+      <div class="split left">
+        <p class="title">💿 Select source playlists to merge</p>
+        <div class="selection">
+          {%for p in playlists%}
+          <input class="custom-checkbox" type="checkbox" id="{{p['id']}}" name="playlists_to_merge" value="{{p}}" />
+          <label class="playlist-title" for="{{p['id']}}">{{p['name']}}</label><br />
+          {%endfor%}
         </div>
-        <div class='button-row'>
-            <input type="submit" class="path_button submit_btn" value="Go!" onclick="loading();">
-        </div>
-    </form>
+      </div>
+
+      <div class="split right">
+        <p class="options-title">Options:</p>
+
+        <label class="options-label" for="merged_playlist_name">Playlist name</label><br />
+        <input
+          type="text"
+          id="merged_playlist_name"
+          name="merged_playlist_name"
+          placeholder="Merged Playlist"
+        /><br /><br />
+
+        <input type="checkbox" id="merge_public" name="merge_is_public" value="true" />
+        <label class="options-label-padded" for="merge_public">Make merged playlist public</label><br />
+
+        <input checked type="radio" id="merge_rnd" name="merge_order_mode_style" value="false" />
+        <label class="options-label-padded" for="merge_rnd">Shuffle randomly</label><br />
+
+        <input type="radio" id="merge_style" name="merge_order_mode_style" value="true" />
+        <label class="options-label-padded" for="merge_style">Order by style</label><br />
+      </div>
+    </div>
+    <div class="button-row">
+      <input type="submit" class="path_button submit_btn" value="Go!" onclick="loading();" />
+    </div>
+  </form>
 </div>
 {% endblock %}
-
-
-
