--- a/app/templates/split.html
+++ b/app/templates/split.html
@@ -1,36 +1,35 @@
-{% extends "base.html" %}
-{% block head %}
-	{{ super() }}
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='options.css') }}">
+{% extends "base.html" %} {% block head %} {{ super() }}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='options.css') }}" />
 
-{% endblock %}
+{% endblock %} {% block content %}
 
-
-{% block content %}
-
-
+<script type="text/javascript">
+  // <![CDATA[
+  function loading() {
+    $("#loading").show();
+    $("#content").hide();
+  }
+  // ]]>
+</script>
 
 <div class="options-menu">
-    <div class='options-row'>
-        <div class='split left'>
-            <p class="title">💿 Select source playlists to split</p>
-            <form>
-                {%for p in playlists%}
-                    <input class="custom-checkbox" type="checkbox" id="{{p['id']}}" name="{{p['name']}}" value="{{p['id']}}">
-                    <label class="playlist-title" for="{{p['id']}}">{{p['name']}}</label><br>
-                {%endfor%}
-            </form>
+  <form method="post">
+    <div class="options-row">
+      <div class="split left">
+        <p class="title">💿 Select source playlists to split</p>
+        <div class="selection">
+          {%for p in playlists%}
+          <input class="custom-checkbox" type="checkbox" id="{{p['id']}}" name="{{p['name']}}" value="{{p['id']}}" />
+          <label class="playlist-title" for="{{p['id']}}">{{p['name']}}</label><br />
+          {%endfor%}
         </div>
+      </div>
 
-        <div class='split right'>
-
-        </div>
+      <div class="split right"></div>
     </div>
-    <div class='button-row'>
-        <div class="path_button"><a href="#" class="submit_btn"><i class="fab fa-spotify"></i>Go!</a></div>
+    <div class="button-row">
+      <input type="submit" class="path_button submit_btn" value="Go!" onclick="loading();" />
     </div>
+  </form>
 </div>
 {% endblock %}
-
-
-
