--- a/app/templates/merge.html
+++ b/app/templates/merge.html
@@ -36,9 +36,11 @@
           placeholder="Merged Playlist"
         /><br /><br />
 
+        <p class="sub-label">Visibility:</p>
         <input type="checkbox" id="merge_public" name="merge_is_public" value="true" />
         <label class="options-label-padded" for="merge_public">Make merged playlist public</label><br />
 
+        <p class="sub-label">Order:</p>
         <input checked type="radio" id="merge_rnd" name="merge_order_mode_style" value="false" />
         <label class="options-label-padded" for="merge_rnd">Shuffle randomly</label><br />
 
