--- a/app/templates/reorder.html
+++ b/app/templates/reorder.html
@@ -12,6 +12,12 @@
   // ]]>
 </script>
 
+<div class="navbar-row">
+  <span class="path_button"><a class="login_btn" href="/"><i class="fas fa-home"></i></a></span>
+  <span class="path_button"><a class="login_btn" href="/login"><i class="fas fa-sign-out-alt"></i></a></span>
+</div>
+
+
 <div class="options-menu">
   <form method="post">
     <div class="options-row">
