--- a/app/static/home.css
+++ b/app/static/home.css
@@ -7,7 +7,7 @@
     padding: 0;
 }
 
-#content .message {
+.message-row {
     margin: 0;
     position: absolute;
     top: 50%;
@@ -47,3 +47,12 @@ i {
     box-shadow: inset 15px 15px 45px #0a0808,
                 inset -15px -15px 45px #282020;
 }
+
+.navbar-row {
+    height: 10vh;
+    top: 0;
+    padding-top: 30px;
+    position:absolute;
+    right:0;
+    padding-right: 30px;
+  }
